<?xml version="1.0" encoding="utf-8"?>
<!--
    Author: Asad Jawaid
    Student Number: 104969683
    Due Date: 2021-03-12
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:id="@+id/countdown_timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:padding="10dp"
        android:text="@string/timer"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="100dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="263dp"
        android:layout_marginLeft="263dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/score_text"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="183dp"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="34dp"
        android:text="@string/num_second"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/math_operator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="34dp"
        android:text="@string/operator"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="34dp"
        android:text="@string/num_first"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp">

        <TextView
            android:id="@+id/first_option"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:background="@color/navy"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/option_one"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/second_option"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/green"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/option_two"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/third_option"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="116dp"
            android:background="@color/deep_pink"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/option_three"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forth_option"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/aqua"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/option_four"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="211dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:backgroundTint="@color/black"
        android:text="@string/play"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wrong_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="257dp"
        android:text="@string/correct_incorrect"
        android:textSize="30sp" />
</RelativeLayout>